# git-commit-message-helper

./: README.md  pyproject.toml
scripts/: setup.sh
src/gcmh/: __init__.py  cli.py
