[project]
name = "gcmh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "j341nono", email = "kanakana.nono1224@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.11.0",
]

[project.scripts]
gcmh = "gcmh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
